# pandoc-mermaid

./: .gitignore  LICENSE  pandoc-mermaid.cabal  stack.yaml  test.json  test.md
app/: Main.hs
src/Text/Pandoc/Mermaid/: Filter.hs  Run.hs
