name:                pandoc-mermaid
version:             0.1.1
-- synopsis:
-- description:
homepage:            https://github.com/Alxandr/pandoc-mermaid#readme
license:             BSD3
license-file:        LICENSE
author:              Alxandr
maintainer:          alxandr@alxandr.me
copyright:           Alxandr 2017
category:            Text
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Text.Pandoc.Mermaid.Filter
                     , Text.Pandoc.Mermaid.Run
  other-modules:       Paths_pandoc_mermaid
  build-depends:       base >= 4.7 && < 5
                     , pandoc-types >= 1.17.0.5
                     , filepath
                     , process
                     , exceptions
                     , cryptonite
                     , bytestring
                     , directory
                     , aeson
  default-language:    Haskell2010

executable pandoc-mermaid
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pandoc-mermaid
                     , bytestring
  default-language:    Haskell2010

test-suite pandoc-mermaid-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pandoc-mermaid
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Alxandr/pandoc-mermaid
